@@ -192,9 +192,11 @@
 # When run as root, drop privileges to this user and its primary
 # group.
 # Set to root to stay as root, but this is not recommended.
+# If set to "mosquitto", or left unset, and the "mosquitto" user does not exist
+# then it will drop privileges to the "nobody" user instead.
 # If run as a non-root user, this setting has no effect.
-# Note that on Windows this has no effect and so mosquitto should
-# be started by the user you wish it to run as.
+# Note that on Windows this has no effect and so mosquitto should be started by
+# the user you wish it to run as.
 #user mosquitto
 
 # =================================================================
