@@ -1,3 +1,9 @@
+Broker:
+- When running as root, if dropping privileges to the "mosquitto" user fails,
+  then try "nobody" instead. This reduces the burden on users installing
+  Mosquitto themselves.
+
+
 1.6.4 - 20190801
 ================
 
